--- a/hc_review/home.html
+++ b/hc_review/home.html
@@ -1,28 +1,146 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>HTML & CSS Review</title>
-    <link rel="stylesheet" href="styles.css">
-</head>
-<body>
-    <div class="bannerhome">
-        <div class="navbar">
-            <a href="home.html"><img src="images/wiredcolorlogo.png" alt="logo" class="logo"></a>
-            <ul>
-                <li><a href="home.html">Home</a></li>
-                <li><a href="menu.html">Menu</a></li>
-                <li><a href="about.html">About</a></li>
-                <li><a href="contact.html">Contact</a></li>
-            </ul>
-        </div>
-        <div class="contenthome">
-            <h1>Welcome to Wired</h1>
-            <p>Come in for a cup</p>
-        </div>
-    </div>
 
-    
-</body>
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>HTML & CSS Review</title>
+        <!-- Bootstrap CSS -->
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
+            integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN"
+            crossorigin="anonymous" />
+
+        <!-- Bootstrap JS Bundle -->
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
+            integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
+            crossorigin="anonymous"></script>
+
+        <!-- Google Icons API -->
+        <link rel="stylesheet"
+            href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
+
+        <!-- Google Font API -->
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Bad+Script&display=swap" rel="stylesheet">
+
+        <!-- Custom Styling -->
+        <link rel="stylesheet" href="styles.css">
+
+    </head>
+
+    <body>
+        <nav class="navbar navbar-expand-sm navbar-light no-border-radius bg-glass">
+            <div class="container-fluid">
+                <a class="navbar-brand" href="home.html">
+                    <img src="images/wiredcolorlogo.png" alt="Logo" width="80px" height="80px" class="align-text-top">
+                </a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                    data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false"
+                    aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse justify-content-end" id="navbarNavDropdown">
+                    <ul class="navbar-nav">
+                        <li class="nav-item text-center mx-auto">
+                            <a class="nav-link active" aria-current="page" href="home.html">Home</a>
+                        </li>
+                        <li class="nav-item text-center mx-auto">
+                            <a class="nav-link" href="menu.html">Menu</a>
+                        </li>
+                        <li class="nav-item text-center mx-auto">
+                            <a class="nav-link" href="contact.html">Contact</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </nav>
+        <div class="home-header-image">
+            <img src="images/wired_bi.png" alt="crafting espresso">
+            <h1 class="bad-script-regular text-center">Welcome to Wired</h1>
+            <p class="bad-script-regular text-center">Come in for a cup</p>
+        </div>
+        <!-- About -->
+        <div class="container-fluid bg-coffee-bag">
+            <div class="row">
+                <div class="col-6"></div>
+                <div class="p-5 col-lg-6 col-md-12 d-flex flex-column bg-coffee-transparent">
+                    <h1 class="text-center bad-script-regular mb-4 white z-index-100">Our Story</h1>
+                    <p class="white text-center z-index-100">Wired Coffee Bar was born out of a passion for crafting the
+                        perfect cup
+                        and
+                        creating a space
+                        where
+                        connections thrive. Since 2014, we've proudly served Ooltewah with premium coffee
+                        experiences,
+                        becoming a cherished hub for locals and visitors alike.
+                        <br>
+                        <br>At Wired, we believe that great coffee
+                        is more than just a beverage; it's an experience that brings
+                        people together. Our skilled baristas are dedicated to the art of coffee, ensuring each cup is a
+                        masterpiece
+                        of flavor, aroma, and quality. From meticulously sourced beans to expertly brewed blends, every
+                        detail
+                        is a
+                        testament to our commitment to excellence.
+                    </p>
+                </div>
+            </div>
+        </div>
+        <!-- Icons -->
+        <div class="container-fluid mx-auto">
+            <div class="row p-5 row-cols-lg-4 row-cols-md-2 row-cols-1">
+                <div class="col-12 col-md-6 col-lg-3 order-1">
+                    <img class="icon d-block mx-auto" src="images/coffee-beans-2.png" alt="coffee beans">
+                    <h2 class="p-5 text-center bad-script-regular">Locally Sourced</h2>
+                    <p class="text-center">Our coffee shop takes pride in using locally sourced ingredients to create a
+                        menu that supports
+                        local farmers and
+                        ensures freshness.</p>
+                </div>
+                <div class="col-12 col-md-6 col-lg-3 order-2">
+                    <img class="icon d-block mx-auto" src="images/coffee-machine.png" alt="coffee machine">
+                    <h2 class="p-5 text-center bad-script-regular">Crafted with Care</h2>
+                    <p class="text-center">Every cup is crafted with care, reflecting our commitment to delivering a
+                        premium coffee
+                        experience with attention to
+                        detail.</p>
+                </div>
+                <div class="col-12 col-md-6 col-lg-3 order-3">
+                    <img class="icon d-block mx-auto" src="images/croissant.png" alt="croissant">
+                    <h2 class="p-5 text-center bad-script-regular">Fresh Baked Daily</h2>
+                    <p class="text-center">Indulge in the goodness of our fresh baked daily food, made with love and
+                        quality ingredients to
+                        satisfy your taste
+                        buds.</p>
+                </div>
+                <div class="col-12 col-md-6 col-lg-3 order-4">
+                    <img class="icon d-block mx-auto" src="images/coffee-shop.png" alt="coffee shop">
+                    <h2 class="p-5 text-center bad-script-regular">Community Staple</h2>
+                    <p class="text-center">Serving as a staple of our community, our coffee shop is a welcoming space
+                        where neighbors
+                        gather, fostering a sense of
+                        belonging and connection.</p>
+                </div>
+            </div>
+        </div>
+        <!-- Home to Menu -->
+        <div class="container-fluid bg-crema">
+            <div class="row row-cols-lg-2 row-cols-md-2 row-cols-1">
+                <div class="col-12 col-lg-6">
+                    <img class="w-100 h-100" src="images/bg-coffee-cs.jpeg" alt="coffee customer service">
+                </div>
+                <div class="col-12 col-lg-6 d-flex align-items-center justify-content-center">
+                    <div class="text-center">
+                        <h1 class="bad-script-regular m-4 pt-5 px-5 white">View our selection of classic coffees,
+                            house recipes,
+                            fresh baked sweets, and tea.</h1>
+                        <a href="menu.html" class="btn-cool mx-auto mb-5">View Menu</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+    </body>
+
 </html>
