--- a/hc_review/home.html
+++ b/hc_review/home.html
@@ -57,8 +57,8 @@
         </nav>
         <div class="home-header-image">
             <img src="images/wired_bi.png" alt="crafting espresso">
-            <h1 class="bad-script-regular text-center">Welcome to Wired</h1>
-            <p class="bad-script-regular text-center">Come in for a cup</p>
+            <h1 class="col-12 bad-script-regular text-center">Welcome to Wired</h1>
+            <p class="col-12 bad-script-regular text-center">Come in for a cup</p>
         </div>
         <!-- About -->
         <div class="container-fluid bg-coffee-bag">
