--- a/hc_review/home.html
+++ b/hc_review/home.html
@@ -60,33 +60,6 @@
             <h1 class="col-12 bad-script-regular text-center">Welcome to Wired</h1>
             <p class="col-12 bad-script-regular text-center">Come in for a cup</p>
         </div>
-        <!-- About -->
-        <div class="container-fluid bg-coffee-bag">
-            <div class="row">
-                <div class="col-6"></div>
-                <div class="p-5 col-lg-6 col-md-12 d-flex flex-column bg-coffee-transparent">
-                    <h1 class="text-center bad-script-regular mb-4 white z-index-100">Our Story</h1>
-                    <p class="white text-center z-index-100">Wired Coffee Bar was born out of a passion for crafting the
-                        perfect cup
-                        and
-                        creating a space
-                        where
-                        connections thrive. Since 2014, we've proudly served Ooltewah with premium coffee
-                        experiences,
-                        becoming a cherished hub for locals and visitors alike.
-                        <br>
-                        <br>At Wired, we believe that great coffee
-                        is more than just a beverage; it's an experience that brings
-                        people together. Our skilled baristas are dedicated to the art of coffee, ensuring each cup is a
-                        masterpiece
-                        of flavor, aroma, and quality. From meticulously sourced beans to expertly brewed blends, every
-                        detail
-                        is a
-                        testament to our commitment to excellence.
-                    </p>
-                </div>
-            </div>
-        </div>
         <!-- Icons -->
         <div class="container-fluid mx-auto">
             <div class="row p-5 row-cols-lg-4 row-cols-md-2 row-cols-1">
@@ -132,7 +105,7 @@
                 </div>
                 <div class="col-12 col-lg-6 d-flex align-items-center justify-content-center">
                     <div class="text-center">
-                        <h1 class="bad-script-regular m-4 pt-5 px-5 white">View our selection of classic coffees,
+                        <h1 class="bad-script-regular m-4 pt-5 px-5">View our selection of classic coffees,
                             house recipes,
                             fresh baked sweets, and tea.</h1>
                         <a href="menu.html" class="btn-cool mx-auto mb-5">View Menu</a>
@@ -140,7 +113,32 @@
                 </div>
             </div>
         </div>
-
+        <!-- About -->
+        <div class="container-fluid position-relative d-flex align-items-center justify-content-center bg-coffee-float">
+            <div class="row">
+                <div class="p-5 col-12 col-lg-6 col-md-9 text-center mx-auto">
+                    <!-- Centered Heading and Paragraph -->
+                    <div class="bg-glass-crema p-5 rounded-5">
+                        <h1 class="bad-script-regular mb-4">
+                            Our Story
+                        </h1>
+                        <p>
+                            Wired Coffee Bar was born out of a passion for crafting the perfect cup
+                            and creating a space where connections thrive. Since 2014, we've proudly served Ooltewah
+                            with premium coffee experiences, becoming a cherished hub for locals and visitors alike.
+                            <br>
+                            <br>At Wired, we believe that great coffee is more than just a beverage; it's an experience
+                            that
+                            brings people together. Our skilled baristas are dedicated to the art of coffee, ensuring
+                            each cup
+                            is a masterpiece of flavor, aroma, and quality. From meticulously sourced beans to expertly
+                            brewed
+                            blends, every detail is a testament to our commitment to excellence.
+                        </p>
+                    </div>
+                </div>
+            </div>
+        </div>
     </body>
 
 </html>
